[package]
name = "insurance"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[workspace]

[dependencies]

chrono =  {version = "0.4.24", default-features = false }
ink = { version = "4.0.0-beta", default-features = false }
ink_prelude = { version = "4.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "insurance"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	#"cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "ink_prelude/std", "chrono/std"]
ink-as-dependency = []
